updated css structure

--- a/css/core.css
+++ b/css/core.css
@@ -11,19 +11,19 @@
 
 /* Theme's main structure 
 -------------------------------------------------------------------------------
-	1. FONT IMPORTS
-	2. COLOR
-	3. GRID
-	4. FLOAT
-	5. WIDTH
-	6. ALIGNMENT
-	7. HEADINGS
-	8. BORDER STYLES
-	9. INPUT TYPES
-	10. BUTTONS
+	EX-1. FONT IMPORTS
+	EX-2. COLOR
+	EX-3. GRID
+	EX-4. FLOAT
+	EX-5. WIDTH
+	EX-6. ALIGNMENT
+	EX-7. HEADINGS
+	EX-8. BORDER STYLES
+	EX-9. INPUT TYPES
+	EX-10. BUTTONS
 -------------------------------------------------------------------------------*/
 
-/* 1. FONT IMPORTS
+/* EX-1. FONT IMPORTS
 -------------------------------------------------------------------------------*/
 
 @font-face {
@@ -62,8 +62,9 @@
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 2. COLOR
+/* EX-2. COLOR
 -------------------------------------------------------------------------------*/
+
 .dark{
 	background: #111111;
 	color: #ffffff;
@@ -78,9 +79,11 @@
 	background: #fff;
 	color: #111111;
 }
+
 /*-------------------------------------------------------------------------------*/
-/* 3. GRID
+/* EX-3. GRID
 -------------------------------------------------------------------------------*/
+
 .col-1{
 	display: block;
 	width: 100%;
@@ -108,11 +111,11 @@
 
 .col-6{
 	display: inline-block;
-	width: 66.666%;
+	width: 66.667%;
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 4. FLOAT
+/* EX-4. FLOAT
 -------------------------------------------------------------------------------*/
 .floatLeft{
 	float: left;
@@ -123,7 +126,7 @@
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 5. WIDTH
+/* EX-5. WIDTH
 -------------------------------------------------------------------------------*/
 .gridWidth{
 	width:1152px;
@@ -138,7 +141,7 @@
 
 
 /*-------------------------------------------------------------------------------*/
-/* 6. ALIGNMENT
+/* EX-6. ALIGNMENT
 -------------------------------------------------------------------------------*/
 .alignCenter{
 	margin: 0 auto;
@@ -234,7 +237,7 @@
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 7. HEADINGS
+/* EX-7. HEADINGS
 -------------------------------------------------------------------------------*/
 
 h1{
@@ -292,7 +295,7 @@ h6{
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 8. BORDER STYLES
+/* EX-8. BORDER STYLES
 -------------------------------------------------------------------------------*/
 
 .border{
@@ -315,13 +318,18 @@ h6{
 	border-color: #ccc;
 }
 
+.border-right-light{
+	border-right: 1px solid;
+	border-color: #ccc;
+}
+
 .border-dark{
 	border: 1px solid;
 	border-color: #111111;
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 9. INPUT TYPES
+/* EX-9. INPUT TYPES
 -------------------------------------------------------------------------------*/
 
 input, textarea{
@@ -436,7 +444,7 @@ textarea{
 }
 
 /*-------------------------------------------------------------------------------*/
-/* 10. BUTTONS
+/* EX-10. BUTTONS
 -------------------------------------------------------------------------------*/
 
 .minimalButton{
